// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should hide the toggle button if no onClick method 1`] = `
<div>
  <div
    class="css-8cvvgy"
  >
    <div
      class="select-none md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        Header
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button should render 1`] = `
<div>
  <div
    class="css-8cvvgy"
  >
    <div
      class="select-none cursor-pointer group md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        Header
      </div>
      <div
        class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100"
        css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
      >
        <div
          class="css-16yt50s"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform css-15txs7d"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button should render collapsed 1`] = `
<div>
  <div
    class="css-1xhm62p"
  >
    <div
      class="select-none cursor-pointer group md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        Header
      </div>
      <div
        class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100"
        css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
      >
        <div
          class="css-16yt50s"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform css-15txs7d"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button should render expanded 1`] = `
<div>
  <div
    class="css-8cvvgy"
  >
    <div
      class="select-none cursor-pointer md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 md:border-b"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        Header
      </div>
      <div
        class="ml-4 flex flex-shrink-0 items-center self-stretch"
        css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
      >
        <div
          class="css-16yt50s"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform rotate-180 css-15txs7d"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button should render skeleton wrapper 1`] = `
<div>
  <div
    class="flex h-20 items-center py-4 px-8 md:px-4"
    data-testid="AccordionHeaderSkeletonWrapper"
  >
    content
    <div
      class="flex h-full items-center border-theme-secondary-300 pl-4 dark:border-theme-secondary-800 dark:group-hover:border-theme-secondary-700"
    >
      <div
        class="flex h-8 w-8 content-center items-center justify-center rounded-lg bg-theme-background text-theme-secondary-500 ring-1 ring-theme-secondary-300 dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
      >
        <div
          class="css-15txs7d"
          height="10"
          width="10"
        >
          <svg>
            chevron-down-small.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button should toggle the accordion on click 1`] = `
<div>
  <div
    class="css-8cvvgy"
  >
    <div
      class="select-none cursor-pointer md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 md:border-b"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-grow flex-row items-center"
      >
        Header
      </div>
      <div
        class="ml-4 flex flex-shrink-0 items-center self-stretch"
        css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
      >
        <div
          class="css-16yt50s"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform rotate-180 css-15txs7d"
            height="10"
            width="10"
          >
            <svg>
              chevron-down-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;
